formated it propery

--- a/html/index.html
+++ b/html/index.html
@@ -9,17 +9,17 @@
 
 
 <body>
-<div id="islamic-date"></div>
+<div id="hijri-date"></div>
 <script>
-    var islamicDateElement = document.getElementById("islamic-date");
-    islamicDateElement.innerHTML = writeIslamicDate();
+    var hijriDateElement = document.getElementById("hijri-date");
+    hijriDateElement.innerHTML = writeHijriDate();
 </script>
 </body>
 
 
 <body onload="displayTime()">
 <div id="current-time-container">
-    Current Time and Date: <span id="current-time"></span>
+    <span id="current-time"></span>
     <img id="settings-icon" src="/images/settings-icon.png" alt="Settings Icon">
 </div>
 
