added feature to view the weather problem to fix is the tempature displays Â that should not be displayed

--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="EN">
 
 <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -27,8 +27,17 @@
 </div>
 
 <div id="settings-container" style="display: none;">
-    <label for="toggle-additional-columns"></label><input type="checkbox" id="toggle-additional-columns"> Show Sunnah Rawatib
+    <label for="toggle-additional-columns"></label><input type="checkbox" id="toggle-additional-columns"> Show Sunnah
+    Rawatib
+    <input type="checkbox" id="toggle-weather-info">
+    <label for="toggle-weather-info">Show Weather Info</label>
+    <div id="weather-info" style="display:none;">
+        <p>Temperature: <span id="temperature"></span></p>
+        <p>Wind Speed: <span id="wind-speed"></span></p>
+    </div>
+
 </div>
+
 
 <table id="prayer-times">
     <thead>
