--- a/html/index.html
+++ b/html/index.html
@@ -26,11 +26,15 @@
 </div>
 
 <div id="settings-container" style="display: none;">
-    <label for="toggle-additional-columns"></label><input type="checkbox" id="toggle-additional-columns"> Show Sunnah
-    Rawatib
+    <label for="toggle-additional-columns"></label>
+
+    <input type="checkbox" id="toggle-additional-columns"> Show Sunnah Rawatib
+    <br>
     <input type="checkbox" id="toggle-weather-info">
     <label for="toggle-weather-info">Show Weather Info</label>
-
+    <br>
+    <label for="image-upload">Upload Image:</label>
+    <input type="file" id="image-upload">
 </div>
 
 <div id="weather-info" style="display:none;">
@@ -82,6 +86,7 @@
     </tbody>
 </table>
 <script src="/js/script.js"></script>
+<script src="/js/image.js"></script>
 
 </body>
 
