fixed the banner and made it not affect other

--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,11 @@
     <script src="/js/hijri-date.js"></script>
 </head>
 
-
-<body>
 <div id="hijri-date"></div>
 <script>
     var hijriDateElement = document.getElementById("hijri-date");
     hijriDateElement.innerHTML = writeHijriDate();
 </script>
-</body>
 
 
 <body onload="displayTime()">
@@ -33,7 +30,7 @@
     <input type="checkbox" id="toggle-weather-info">
     <label for="toggle-weather-info">Show Weather Info</label>
     <br>
-    <label for="image-upload">Upload Image:</label>
+    <label for="image-upload">Upload Banner:</label>
     <input type="file" id="image-upload">
 </div>
 
