added the logo to the favcon

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Prayer Time Display</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <script src="/js/hijri-date.js"></script>
 </head>
 
