--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,8 @@
     <input type="checkbox" id="toggle-sunrise">
     <label for="toggle-sunrise">Show Sunrise Time</label>
     <br>
+    <label><input type="checkbox" id="show-iqamah"> Show Iqamah Time</label>
+    <br>
     <label for="image-upload">Upload Banner:</label>
     <input type="file" id="image-upload">
     <br>
@@ -46,6 +48,10 @@
         <input type="file" id="csv-file-input">
         <button id="parse-csv-button">Upload Prayer Time</button>
     </div>
+
+    <label for="adjustable-minutes">Adjustable minutes:</label>
+    <input type="number" id="adjustable-minutes" name="adjustable-minutes" value="0">
+    
 </div>
 
 
@@ -60,6 +66,7 @@
     <tr>
         <th>Prayer</th>
         <th>Time</th>
+        <td class="iqamah-time" style="display:none;">Iqamah</td>
         <th class="additional-column" style="display: none;">Before</th>
         <th class="additional-column" style="display: none;">After</th>
     </tr>
@@ -68,8 +75,10 @@
     <tr>
         <td>Fajr</td>
         <td id="fajr-time"></td>
+        <td class="fajr-iqamah" style="display:none;">Iqamah</td>
         <td class="additional-column" style="display: none;">2</td>
         <td class="additional-column" style="display: none;">0</td>
+
     </tr>
     <tr id="sunrise-row" style="display: none;">
         <td>Sunrise</td>
@@ -78,24 +87,28 @@
     <tr>
         <td>Dhuhr</td>
         <td id="dhuhr-time"></td>
+        <td class="dhur-iqamah" style="display:none;">Iqamah</td>
         <td class="additional-column" style="display: none;">2+2</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Asr</td>
         <td id="asr-time"></td>
+        <td class="asr-iqamah" style="display:none;">Iqamah</td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">0</td>
     </tr>
     <tr>
         <td>Maghrib</td>
         <td id="maghrib-time"></td>
+        <td class="maghrib-iqamah" style="display:none;">Iqamah</td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Isha</td>
         <td id="isha-time"></td>
+        <td class="isha-iqamah" style="display:none;">Iqamah</td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
@@ -105,6 +118,7 @@
 <script src="/js/script.js"></script>
 <script src="/js/image.js"></script>
 <script src="/js/csv.js"></script>
+<script src="/js/iqamah.js"></script>
 
 <button onclick="clearLocalStorage()">Clear localStorage</button>
 
