cleaing up code solid principles

--- a/html/index.html
+++ b/html/index.html
@@ -119,6 +119,8 @@
 <script src="/js/image.js"></script>
 <script src="/js/csv.js"></script>
 <script src="/js/iqamah.js"></script>
+<script src="/js/sunnahRawatib.js"></script>
+<script src="/js/weather.js"></script>
 
 <button onclick="clearLocalStorage()">Clear localStorage</button>
 
