got iqamah time to work

--- a/html/index.html
+++ b/html/index.html
@@ -75,7 +75,7 @@
     <tr>
         <td>Fajr</td>
         <td id="fajr-time"></td>
-        <td class="fajr-iqamah" style="display:none;"></td>
+        <td id="fajr-iqamah" class="iqamah-time"></td>
         <td class="additional-column" style="display: none;">2</td>
         <td class="additional-column" style="display: none;">0</td>
 
@@ -87,28 +87,28 @@
     <tr>
         <td>Dhuhr</td>
         <td id="dhuhr-time"></td>
-        <td class="dhur-iqamah" style="display:none;"></td>
+        <td id="dhuhr-iqamah" class="iqamah-time" ></td>
         <td class="additional-column" style="display: none;">2+2</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Asr</td>
         <td id="asr-time"></td>
-        <td class="asr-iqamah" style="display:none;"></td>
+        <td id="asr-iqamah" class="iqamah-time" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">0</td>
     </tr>
     <tr>
         <td>Maghrib</td>
         <td id="maghrib-time"></td>
-        <td class="maghrib-iqamah" style="display:none;"></td>
+        <td id="maghrib-iqamah" class="iqamah-time" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Isha</td>
         <td id="isha-time"></td>
-        <td class="isha-iqamah" style="display:none;"></td>
+        <td id="isha-iqamah" class="iqamah-time" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
