added AM PM to the iqmah and also working on the audio

--- a/html/index.html
+++ b/html/index.html
@@ -143,6 +143,7 @@
 <script src="/js/iqamah.js"></script>
 <script src="/js/sunnahRawatib.js"></script>
 <script src="/js/weather.js"></script>
+<script src="/js/mp3.js"></script>
 
 <button onclick="clearLocalStorage()">Clear localStorage</button>
 
