fixed an issue where the column was empty but still displayed

--- a/html/index.html
+++ b/html/index.html
@@ -97,7 +97,7 @@
     <tr>
         <td>Fajr</td>
         <td id="fajr-time"></td>
-        <td id="fajr-iqamah" class="iqamah-time"></td>
+        <td id="fajr-iqamah" class="iqamah-time" style="display: none;"></td>
         <td class="additional-column" style="display: none;">2</td>
         <td class="additional-column" style="display: none;">0</td>
 
@@ -109,28 +109,28 @@
     <tr>
         <td>Dhuhr</td>
         <td id="dhuhr-time"></td>
-        <td id="dhuhr-iqamah" class="iqamah-time" ></td>
+        <td id="dhuhr-iqamah" class="iqamah-time" style="display: none;" ></td>
         <td class="additional-column" style="display: none;">2+2</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Asr</td>
         <td id="asr-time"></td>
-        <td id="asr-iqamah" class="iqamah-time" ></td>
+        <td id="asr-iqamah" class="iqamah-time" style="display: none;" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">0</td>
     </tr>
     <tr>
         <td>Maghrib</td>
         <td id="maghrib-time"></td>
-        <td id="maghrib-iqamah" class="iqamah-time" ></td>
+        <td id="maghrib-iqamah" class="iqamah-time" style="display: none;" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
     <tr>
         <td>Isha</td>
         <td id="isha-time"></td>
-        <td id="isha-iqamah" class="iqamah-time" ></td>
+        <td id="isha-iqamah" class="iqamah-time" style="display: none;" ></td>
         <td class="additional-column" style="display: none;">0</td>
         <td class="additional-column" style="display: none;">2</td>
     </tr>
